# e-

./: .gitignore  README.md
.github/: CODEOWNERS
python_execution_service/: .env.example  __init__.py  config.py  cortex_pty.py  helpers.py  main.py  models.py  pyproject.toml  routes.py  sqlite_store.py  terminal_bridge.py  workflow.py
python_execution_service/agentic_core/: __init__.py  decision.py  state.py
python_execution_service/agentic_core/agent/: __init__.py  context_logger.py  cortex_chat.py  graph.py  tools.py
python_execution_service/agentic_core/nodes/: add_source_code.py  common.py  convert_code.py  execute_sql.py  finalize.py  human_review.py  init_project.py  schema_mapping.py  self_heal.py  validate.py
python_execution_service/agentic_core/routing/: decisions.py
python_execution_service/agentic_core/runtime/: snowflake_execution.py  snowflake_session.py
python_execution_service/agentic_core/services/: ewi_cleanup.py  file_tools.py  report_context.py  scai_runner.py  schema_conversion_teradata_to_snowflake.py  schema_mapping.py  self_healing.py  validation.py
python_execution_service/agentic_core/utils/: activity_log.py  sql_files.py
python_execution_service/app/: main.py
python_execution_service/app/api/routes/: __init__.py  _shared.py  health.py  run_actions.py  runs.py  streaming.py
python_execution_service/app/config/: settings.py
python_execution_service/domain/migration/: constants.py  workflow.py
python_execution_service/domain/runs/: service.py  state.py
python_execution_service/infrastructure/persistence/sqlite/: store.py
(+61 files in other folders)
